<resources>
    <string name="app_name">ProjectGreen</string>
    <string name="environment_care">"What's the best for the"</string>
    <string name="environment">environment?</string>
    <string name="sign_in">Sign in</string>
    <string name="createAccount">Create an account</string>
    <string name="welcomeback">Welcome back</string>
    <string name="loginyouraccount">Log in to your account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="create_one">Create one</string>
    <string name="enter_full_name">Profile name</string>
    <string name="passwd">Password</string>
    <string name="register">Register</string>
    <string name="create_your_new_acount">Create your new account</string>
    <string name="enter_email">Email</string>
    <string name="Create_account">Create account</string>
    <string name="icon_size">30dp</string>
    <string name="points">Points</string>
    <string name="have_an_account">Already have an account?</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="about_us">About Us</string>
    <string name="text_description_1">Click to register new recycled materials</string>
    <string name="open_nav">Open Drawer</string>
    <string name="close_nav">Close Drawer</string>
    <string name="adminStat">Statistics</string>
    <string name="rewards">Rewards</string>
    <string name="request_to_recycle">Request to recycle</string>
    <string name="request_time">Request time:</string>
    <string name="material">Material</string>
    <string name="approve">APPROVE</string>
    <string name="reject">REJECT</string>
    <string name="requests">Requests</string>
    <string name="statistics">Statistics</string>
    <string name="tune_rewards">Tune rewards</string>
    <string name="enter_pieces">Enter pieces</string>
    <string name="total_recycle_quantity">Total approved quantity by material</string>
    <string name="total_recycle_value">Approximate total approved cashback by material in $</string>
    <string name="leaderboard">Top users by total cashback</string>
    <string name="metal">Metal</string>
    <string name="glass">Glass</string>
    <string name="paper">Paper</string>
    <string name="plastic">Plastic</string>
    <string name="tune_material_value">Tune material value</string>
    <string name="tune_bonus_by_quantity">Tune bonus by quantity</string>
    <string name="quantity">Quantity</string>
    <string name="pieces">pieces approved</string>
    <string name="give_bonus_after">Give bonus for every</string>
    <string name="restore_to_defaults">Restore defaults</string>
    <string name="save_amp_set"><![CDATA[SAVE & SET]]></string>
    <string name="recycle_value">Recycle value:</string>
    <string name="material1">Material:</string>
    <string name="quantity1">:quantity</string>
    <string name="per_piece_total">$ per piece. Total: </string>
    <string name="the_mit_license_copyright">The MIT License \nCopyright © 2024\ngithub.com/bill-chamal/ProjectGreen/blob/main/LICENSE</string>
    <string name="university_of_macedonia_nthessaloniki_greece">University of Macedonia\nThessaloniki Greece</string>
    <string name="GDPR">Due to GDPR law of the European Union, we would like to inform you, any account you create or any action you perform may be saved into Google\'s Firebase Services. Because of that, it would be better to use non personal related information. You can always request you data under the law of the Rights of the Subject. We do not guarantee any integrity or confidentiality of your personal data.</string>
    <string name="cash_in">Cash in!</string>
    <string name="data_analysis">AI data analysis</string>
    <string name="no_requests_at_the_moment">No requests at the moment</string>
    <string name="your_request_list_is_empty_nrequest_new_recycled_material">Your request list is empty\nRequest new recycled material</string>

    <string-array name="materials">
        <item>Plastic</item>
        <item>Glass</item>
        <item>Paper</item>
        <item>Metal</item>
    </string-array>
</resources>