<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/chromeos" />

    <ImageView
        android:id="@+id/imageView_white_wave_strong"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:scaleType="centerCrop"
        android:src="@drawable/background_white_wave_strong"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="-1dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@id/imageView_white_wave_strong"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/candara"
        android:text="@string/register"
        android:textColor="@color/font_dark_green"
        android:textSize="20pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_white_wave_strong" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/candara"
        android:text="@string/create_your_new_acount"
        android:textColor="@color/font_gray"
        android:textSize="8pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCreateNewAccount"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_dark_green"
        android:fontFamily="@font/candara"
        android:text="@string/Create_account"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/candara"
        android:text="@string/have_an_account"
        android:textSize="8pt"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/btnCreateNewAccount" />

    <TextView
        android:id="@+id/btnLoginAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/candara"
        android:text="@string/sign_in"
        android:textColor="@color/font_dark_green"
        android:textSize="8pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnCreateNewAccount" />

    <EditText
        android:id="@+id/txtbox_UserEmail"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/transparent_green"
        android:drawableLeft="@drawable/icon_person"
        android:ems="10"
        android:fontFamily="@font/candara"
        android:hint="@string/enter_full_name"
        android:inputType="text|textPersonName|textAutoComplete|textAutoCorrect"
        android:padding="10dp"
        android:textColor="@color/font_dark_green"
        app:layout_constraintBottom_toTopOf="@+id/txtbox_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/txtbox_password"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/transparent_green"
        android:drawableLeft="@drawable/lock"
        android:ems="10"
        android:fontFamily="@font/candara"
        android:hint="@string/passwd"
        android:inputType="text|textPassword"
        android:padding="10dp"
        android:textColor="@color/font_dark_green"
        app:layout_constraintBottom_toTopOf="@+id/btnCreateNewAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtbox_email"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/btnBack_to_EnterScreen"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtbox_email"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:background="@drawable/transparent_green"
        android:drawableLeft="@drawable/email"
        android:ems="10"
        android:fontFamily="@font/candara"
        android:hint="@string/enter_email"
        android:inputType="text|textEmailAddress|textAutoComplete|textAutoCorrect"
        android:padding="10dp"
        android:textColor="@color/font_dark_green"
        app:layout_constraintBottom_toTopOf="@+id/btnCreateNewAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>